Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjNumber.quorum
Boolean bool = cast(Boolean, 7.5)